log
Tue 12 Sep 2023 11:51:00 PM UTC: 
 tests:  1|8
total_score: 0/70
6595367
Thu 14 Sep 2023 07:38:51 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:27: error: ‘lt’ undeclared (first use in this function)
   43 |         map->lower_than = lt;
      |                           ^~
treemap.c:43:27: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:45:12: error: ‘TreeMap’ has no member named ‘size’
   45 |         map->size = 0;
      |            ^~
Compilation failed
e41be5a
Thu 14 Sep 2023 07:39:06 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:45:12: error: ‘TreeMap’ has no member named ‘size’
   45 |         map->size = 0;
      |            ^~
Compilation failed
e373c23
Thu 14 Sep 2023 07:40:58 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
29d2755
Thu 14 Sep 2023 07:50:17 PM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  6|7
total_score: 5/70
6d2a127
Thu 14 Sep 2023 10:42:14 PM UTC: 
 treemap.c | 21 +++++++++------------
 1 file changed, 9 insertions(+), 12 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:43: error: ‘TreeNode’ has no member named ‘key’
   81 |     int comparar = is_equal(tree, key, aux->key);
      |                                           ^~
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
f616cf1
Thu 14 Sep 2023 10:49:59 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘searchTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
20f1a41
Thu 14 Sep 2023 10:50:49 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
test.c: In function ‘searchTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
00b917a
Thu 14 Sep 2023 10:51:54 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|7
total_score: 5/70
d1fabdb
Thu 14 Sep 2023 10:55:59 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
28c7bd7
Thu 14 Sep 2023 11:09:48 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|7
total_score: 5/70
9728ee5
Thu 14 Sep 2023 11:10:09 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:94:1: error: control reaches end of non-void function [-Werror=return-type]
   94 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2ec866c
Thu 14 Sep 2023 11:10:31 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|7
total_score: 5/70
35b9019
